Table films {
  id int [primary key]
  title varchar
  director varchar
  actors varchar
  min_duration int
  genre film_genre
  classification film_classification
  release_date date
  language varchar
  poster_url varchar
  id_distributor int
}

enum film_genre {
  action
  aventure
  comedie
  drame
  horreur
  science_fiction
  thriller
  animation
  documentaire
  romance
  fantastique
  policier
  historique
  musical
}

enum film_classification {
  tous_publics
  "-10"
  "-12"
  "-16"
  "-18"
}

Table rooms {
  id int [primary key]
  name varchar
  capacity int
  type room_type
}

enum room_type{
    standard
    "3D"
    IMAX
    "4DX"
}

Table seances {
    id int [primary key]
    film_id int [not null, ref: > films.id]
    room_id int [not null, ref: > rooms.id]
    start_at varchar
    end_at varchar
    format seance_format
    status seance_status
    seats_sold int
}

enum seance_format {
    VF
    VO
    VOSTFR
}

enum seance_status {
    scheduled
    open
    closed
    full
    cancelled
}

Table clients {
    id int [primary key]
    first_name varchar
    last_name varchar
    email varchar
    birth_date date
    created_at timestamp
}

Table subscriptions {
    id int [primary key]
    client_id int [not null, ref: > clients.id]
    plan sub_plan
    price_monthly int
    start_date date
    end_date date
    status sub_status
    created_at timestamp
}

enum sub_plan {
    mensuel
    annuel
    illimite
}

enum sub_status {
    active
    suspended
    cancelled
}

Table reservations {
    id int [primary key]
    seance_id int [not null, ref: > seances.id]
    client_id int [not null, ref: > clients.id]
    subscription_id int
    booking_ref varchar
    status res_status
    total_amount decimal
    booked_at timestamp
}

Table tickets {
  id              int         [primary key, increment]
  reservation_id  int         [not null, ref: > reservations.id]
  ticket_type     varchar
  seat_number     varchar
  unit_price      decimal
  is_used         boolean
}

enum res_status {
    pending
    confirmed
    cancelled
    refunded
    used
}


Table distributors {
    id int [primary key]
    name varchar
    country varchar
}


Table distribution_contracts {
    id int [primary key]
    film_id int [not null, ref: > films.id]
    distributor_id int [not null, ref: > distributors.id]
    start_at varchar
    end_at varchar
    status varchar
}

Table royalty_tiers {
  id          int     [primary key]
  contract_id int     [not null, ref: > distribution_contracts.id]
  week_number int     
  percentage  decimal 
}

Table weekly_statements {
  id              int     [primary key]
  contract_id     int     [not null, ref: > distribution_contracts.id]
  week_start      date    [not null]
  week_end        date    [not null]
  gross_revenue   decimal
  royalty_rate    decimal
  royalty_amount  decimal
  status          statement_status
  generated_at    timestamp
}

enum statement_status {
  draft
  validated
  invoiced
  paid
}

Table invoices {
  id               int     [primary key]
  invoice_number   varchar [not null, note: 'Ex: FAC-2024-00042']
  distributor_id   int     [not null, ref: > distributors.id]
  statement_id     int     [not null, ref: > weekly_statements.id]
  amount_ht        decimal
  amount_ttc       decimal
  issued_at        date
  due_date         date
  status           invoice_status
}

enum invoice_status {
  issued
  paid
  overdue
  cancelled
}



